# FARM_Demo

./: README.md  docker-compose.yml
backend/: Dockerfile  __init__.py  config.py  main.py  pyproject.toml  temp_creds.txt
backend/src/auth/: models_auth.py  service_auth.py  utils_auth.py
backend/src/database/: redis_databse.py  utils_database.py
backend/src/middleware/: autoRefresh_middleware.py  enforce_auth_middleware.py
backend/src/redis/: jwt_utils_redis.py  otp_utils_redis.py  redis.py
backend/src/routes/: auth_route.py  crawler_route.py  models_route.py  user_route.py  websocket_route.py
backend/src/user/: models_user.py  notification_user.py  service_user.py  utils_user.py
backend/src/utils/: send_otp_utils.py
backend/src/utils/template/: otp_template.py
backend/src/websocket/: manager.py  manager_websocket.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/apiManager/: ApiManager.js  EndPoints.js  useNotifications.js
frontend/src/components/layout/: AuthLayout.jsx
frontend/src/components/pages/: Dashboard.jsx  DummyTest.jsx  EmailVerification.jsx  Header.jsx  SignIn.jsx  SignUp.jsx  SubmitBio.jsx
frontend/src/components/pages/dashboard/: Dashboard.jsx  Home.jsx  MakePayment.jsx  Message.jsx  Notification.jsx  UserProfile.jsx
frontend/src/components/styleComponent/: Toast.jsx
